--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-background-color: hsl(330, 100%, 71%);
+background-color: hsl(0, 0%, 0%);
 
 
 }
@@ -9,7 +9,8 @@ h1{
     color: dodgerblue;
 }
 
-header{
-    border:solid 2px white;
+header {
+    border:solid 2px rgb(37, 19, 85);
+
 }
 
